<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical"
    tools:context=".ReferencePage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:id="@+id/layot_top_btn"
        android:background="@drawable/gredient_bg">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:scaleType="center"
            android:clickable="true"
            android:onClick="ToMain"
            android:focusable="true"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:text="@string/Reference"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:layout_marginRight="50dp"
            android:background="@android:color/transparent"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LoginFormReference"
            android:textColor="@color/colorAccent"
            android:gravity="left"
            android:textSize="18sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"/>

        <TextView
            android:id="@+id/LoginFormReference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LinkLogin"
            android:textColor="@color/colorAccent"
            android:gravity="left"
            android:textSize="18sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MusicPlayerReference"
            android:textColor="@color/colorAccent"
            android:gravity="left"
            android:textSize="18sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"/>

        <TextView
            android:id="@+id/MusicPlayerReference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LinkMusicPlayer"
            android:textColor="@color/colorAccent"
            android:gravity="left"
            android:textSize="18sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ImageViewReference"
            android:textColor="@color/colorAccent"
            android:gravity="left"
            android:textSize="18sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"/>

        <TextView
            android:id="@+id/ImageViewReference1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LinkImageView"
            android:textColor="@color/colorAccent"
            android:gravity="left"
            android:textSize="18sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"/>

        <TextView
            android:id="@+id/ImageViewReference2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LinkImageView2"
            android:textColor="@color/colorAccent"
            android:gravity="left"
            android:textSize="18sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PopUpReference"
            android:textColor="@color/colorAccent"
            android:gravity="left"
            android:textSize="18sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"/>

        <TextView
            android:id="@+id/PopupMenu1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LinkPopup"
            android:textColor="@color/colorAccent"
            android:gravity="left"
            android:textSize="18sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"/>

        <TextView
            android:id="@+id/PopupMenu2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LinkPopup2"
            android:textColor="@color/colorAccent"
            android:gravity="left"
            android:textSize="18sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DialogReference"
            android:textColor="@color/colorAccent"
            android:gravity="left"
            android:textSize="18sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"/>

        <TextView
            android:id="@+id/WelcomeDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LinkDialog"
            android:textColor="@color/colorAccent"
            android:gravity="left"
            android:textSize="18sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"/>

    </LinearLayout>

</LinearLayout>

