<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mContainer"
    android:background="@drawable/main_bg"
    android:orientation="vertical"
    tools:context=".Profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:id="@+id/layot_top_btn"
        android:background="@drawable/gredient_bg">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:scaleType="center"
            android:clickable="true"
            android:onClick="ToMain"
            android:focusable="true"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:text="@string/ProfileBar"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:layout_marginRight="50dp"
            android:background="@android:color/transparent"
            android:textSize="18sp"
            android:textStyle="bold"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/card">

            <androidx.cardview.widget.CardView
                android:layout_width="250dp"
                android:layout_height="250dp"
                app:cardCornerRadius="300dp"
                android:layout_margin="50dp"
                android:elevation="10dp">

                <ImageView
                    android:id="@+id/roundedImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/profpic"
                    android:background="@color/white"
                    android:scaleType="centerCrop"
                    />
            </androidx.cardview.widget.CardView>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/NIM"
                android:textColor="@color/colorAccent"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                android:singleLine="true"
                android:ellipsize="end"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Name"
                android:textColor="@color/colorAccent"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                android:singleLine="true"
                android:ellipsize="end"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Class"
                android:textColor="@color/colorAccent"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                android:singleLine="true"
                android:ellipsize="end"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/Layout_for_bottom"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/Reference"
                android:onClick="ToReferencePage"
                android:textColor="@color/black"
                android:backgroundTint="@color/grey"
                />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewGradient"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/gredient_bg"/>

    </LinearLayout>

</LinearLayout>

