<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mContainer"
    android:background="@drawable/main_bg"
    android:orientation="vertical"
    tools:context=".PlayerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:id="@+id/layot_top_btn"
        android:background="@drawable/gredient_bg">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:scaleType="center"
            android:clickable="true"
            android:onClick="ToSongList"
            android:focusable="true"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:text="@string/NowPlaying"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:layout_marginRight="50dp"
            android:background="@android:color/transparent"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="vertical"
        android:id="@+id/card">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:id="@+id/cover_art"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/beforePlaySongTitle"
            android:id="@+id/song_name"
            android:textColor="@color/colorAccent"
            android:gravity="center_horizontal"
            android:textSize="22sp"
            android:textStyle="bold"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/beforePlayArtistName"
            android:id="@+id/song_artist"
            android:textColor="@color/colorAccent"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:id="@+id/seek_bar_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:id="@+id/seek_bar_layout_time">

            <TextView
                android:id="@+id/durationPlayed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/StartDurationBeforePlay"
                android:textColor="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TotalDurationBeforePlay"
                android:id="@+id/durationTotal"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="280dp"/>

        </LinearLayout>

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp">
        </SeekBar>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/Layout_for_bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/id_prev"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="52dp"
            android:src="@drawable/ic_skip_previous" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/play_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_play" />

        <ImageView
            android:id="@+id/id_next"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="56dp"
            android:src="@drawable/ic_skip_next" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewGradient"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/gredient_bg" />


</LinearLayout>

